# jupyter-devenv

./: .gitignore  Dockerfile  Makefile  README.md  pyproject.toml
apps/: app.py  gunicorn_logging.conf  main.py
jupyter/: Dockerfile  pyproject.toml
service/: Dockerfile  main.py  pyproject.toml
service/templates/: upload.html
