[tool.poetry]
name = "image recognition"
version = "0.1.0"
description = ""
authors = ["LWH"]

[tool.poetry.dependencies]
python = ">=3.9,<3.11"
boto3 = "^1.17.22"
boto = "^2.49.0"
pydantic = {extras = ["dotenv"], version = "^1.8.1"}
opencv-python = "^4.5.3"
jupyter = "^1.0.0"
matplotlib = "^3.4.3"
Pillow = "^8.4.0"
h5py = "^3.6.0"
tensorflow = "^2.7.0"
pandas = "^1.3.5"
imagesize = "^1.3.0"
seaborn = "^0.11.2"
sklearn = "^0.0"
Flask = "^2.0.2"

[tool.poetry.dev-dependencies]
pytest = "^6.2.2"
mutagen = "^1.45.1"
flake8 = "^3.8.4"
pytest-cov = "^2.11.1"
pytest-mock = "^3.5.1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
